<resources>
    <string name="app_name">Taalhuis Nieuwgrieks</string>
    <string name="correct_answer">Goed!</string>
    <string name="false_answer">Fout!</string>
    <string name="overhoor_gr_nl">Overhoor GR - NL</string>
    <string name="overhoor_nl_gr">Overhoor NL - GR</string>
    <string name="start_button">Start Overhoren</string>
    <string name="next_button">Volgende Woord -></string>
    <string name="einde_overhoring">Je bent klaar met deze les!</string>
    <string name="lesson_one">Les 1</string>
    <string name="lesson_two">Les 2</string>
    <string name="lesson_three">Les 3</string>
    <string name="lesson_four">Les 4</string>
    <string name="lesson_five">Les 5</string>
    <string name="lesson_six">Les 6</string>
    <string name="lesson_seven">Les 7</string>
    <string name="lesson_eight">Les 8</string>
    <string name="lesson_nine">Les 9</string>
    <string name="lesson_ten">Les 10</string>
    <string name="lesson_eleven">Les 11</string>
    <string name="lesson_twelve">Les 12</string>
    <string name="lesson_thirteen">Les 13</string>
    <string name="lesson_fourteen">Les 14</string>
    <string name="lesson_fifteen">Les 15</string>
    <string name="lesson_sixteen">Les 16</string>
    <string name="lesson_seventeen">Les 17</string>
    <string name="lesson_eighteen">Les 18</string>
    <string name="one_nl_word_1">dag</string>
    <string name="one_nl_word_2">hoi</string>
    <string name="one_nl_word_3">heten</string>
    <string name="one_nl_word_4">ik heet Kostas</string>
    <string name="one_nl_word_5">aangenaam</string>
    <string name="one_nl_word_6">goedendag</string>
    <string name="one_nl_word_7">dag</string>
    <string name="one_nl_word_8">goedenavond</string>
    <string name="one_nl_word_9">tot ziens</string>
    <string name="one_nl_word_10">goedenacht</string>
    <string name="one_nl_word_11">ik ben Kostas</string>
    <string name="one_nl_word_12">ik ben Maria</string>
    <string name="one_nl_word_13">onderling</string>
    <string name="one_nl_word_14">ik heet</string>
    <string name="one_nl_word_15">ik heet Kostas</string>
    <string name="one_nl_word_16">hoe heet u?</string>
    <string name="one_nl_word_17">hoe heet je?</string>
    <string name="one_nl_word_18">ik ook</string>
    <string name="one_nl_word_19">vragen</string>
    <string name="one_nl_word_20">antwoorden</string>
    <string name="one_nl_word_21">medeleerling</string>
    <string name="one_nl_word_22">waar komt u vandaan?</string>
    <string name="one_nl_word_23">waar kom je vandaan?</string>
    <string name="one_nl_word_24">ik kom uit</string>
    <string name="one_nl_word_25">de mevrouw</string>
    <string name="one_nl_word_26">jij</string>
    <string name="one_nl_word_27">u</string>
    <string name="one_nl_word_28">juist</string>
    <string name="one_nl_word_29">België</string>
    <string name="one_nl_word_30">Engeland</string>
    <string name="one_nl_word_31">Duitsland</string>
    <string name="one_nl_word_32">Canada</string>
    <string name="one_nl_word_33">Noorwegen</string>
    <string name="one_nl_word_34">Mexico</string>
    <string name="one_nl_word_35">Libanon</string>
    <string name="one_nl_word_36">Amerika</string>
    <string name="one_nl_word_37">Frankrijk</string>
    <string name="one_nl_word_38">Israël</string>
    <string name="one_nl_word_39">Marokko</string>
    <string name="one_nl_word_40">Turkije</string>
    <string name="one_nl_word_41">Nederland</string>
    <string name="one_nl_word_42">Iran</string>
    <string name="one_nl_word_43">Zwitserland</string>
    <string name="one_nl_word_44">Albanië</string>
    <string name="one_nl_word_45">Griekenland</string>
    <string name="one_nl_word_46">Spanje</string>
    <string name="one_nl_word_47">waar?</string>
    <string name="one_nl_word_48">zeer</string>
    <string name="one_nl_word_49">les</string>
    <string name="one_nl_word_50">hoe?</string>
    <string name="one_gr_word_1">γεια σας</string>
    <string name="one_gr_word_2">γεια σου</string>
    <string name="one_gr_word_3">λέγομαι</string>
    <string name="one_gr_word_4">λέγομαι Κώστας</string>
    <string name="one_gr_word_5">χαίρω πολύ</string>
    <string name="one_gr_word_6">καλημέρα</string>
    <string name="one_gr_word_7">χαίρετε</string>
    <string name="one_gr_word_8">καλησπέρα</string>
    <string name="one_gr_word_9">αντίο</string>
    <string name="one_gr_word_10">καληνύχτα</string>
    <string name="one_gr_word_11">είμαι ο Κώστας</string>
    <string name="one_gr_word_12">είμαι η Μαρία</string>
    <string name="one_gr_word_13">μεταξύ τους</string>
    <string name="one_gr_word_14">με λένε</string>
    <string name="one_gr_word_15">με λένε Κώστα</string>
    <string name="one_gr_word_16">πώς σας λένε;</string>
    <string name="one_gr_word_17">πώς σε λένε;</string>
    <string name="one_gr_word_18">κι εγώ</string>
    <string name="one_gr_word_19">ρωτάω</string>
    <string name="one_gr_word_20">απαντάω</string>
    <string name="one_gr_word_21">ο συμμαθητής</string>
    <string name="one_gr_word_22">από πού είστε;</string>
    <string name="one_gr_word_23">από πού είσαι;</string>
    <string name="one_gr_word_24">είμαι από</string>
    <string name="one_gr_word_25">η κυρία</string>
    <string name="one_gr_word_26">εσύ</string>
    <string name="one_gr_word_27">εσείς</string>
    <string name="one_gr_word_28">σωστός</string>
    <string name="one_gr_word_29">το Βέλγιο</string>
    <string name="one_gr_word_30">η Αγγλία</string>
    <string name="one_gr_word_31">η Γερμανία</string>
    <string name="one_gr_word_32">ο Καναδάς</string>
    <string name="one_gr_word_33">η Νορβηγία</string>
    <string name="one_gr_word_34">το Μεξικό</string>
    <string name="one_gr_word_35">ο Λίβανος</string>
    <string name="one_gr_word_36">η Αμερική</string>
    <string name="one_gr_word_37">η Γαλλία</string>
    <string name="one_gr_word_38">το Ισραήλ</string>
    <string name="one_gr_word_39">το Μαρόκο</string>
    <string name="one_gr_word_40">η Τουρκία</string>
    <string name="one_gr_word_41">η Ολλανδία</string>
    <string name="one_gr_word_42">το Ιράν</string>
    <string name="one_gr_word_43">η Ελβετία</string>
    <string name="one_gr_word_44">η Αλβανία</string>
    <string name="one_gr_word_45">η Ελλάδα</string>
    <string name="one_gr_word_46">η Ισπανία</string>
    <string name="one_gr_word_47">πού;</string>
    <string name="one_gr_word_48">πολύ</string>
    <string name="one_gr_word_49">το μάθημα</string>
    <string name="one_gr_word_50">πώς;</string>
    <string name="two_nl_word_1">hoe gaat het met je?</string>
    <string name="two_nl_word_2">hoe gaat het met u?</string>
    <string name="two_nl_word_3">de heer</string>
    <string name="two_nl_word_4">goedendag meneer Moreti</string>
    <string name="two_nl_word_5">meneer</string>
    <string name="two_nl_word_6">goed</string>
    <string name="two_nl_word_7">bedankt</string>
    <string name="two_nl_word_8">hoe gaat het met je?</string>
    <string name="two_nl_word_9">hoe gaat het met u?</string>
    <string name="two_nl_word_10">prima</string>
    <string name="two_nl_word_11">heel goed</string>
    <string name="two_nl_word_12">zozo</string>
    <string name="two_nl_word_13">niet heel goed</string>
    <string name="two_nl_word_14">een</string>
    <string name="two_nl_word_15">twee</string>
    <string name="two_nl_word_16">drie</string>
    <string name="two_nl_word_17">vier</string>
    <string name="two_nl_word_18">vijf</string>
    <string name="two_nl_word_19">zes</string>
    <string name="two_nl_word_20">zeven</string>
    <string name="two_nl_word_21">acht</string>
    <string name="two_nl_word_22">negen</string>
    <string name="two_nl_word_23">tien</string>
    <string name="two_nl_word_24">nul</string>
    <string name="two_nl_word_25">maken, doen</string>
    <string name="two_nl_word_26">hoeveel is twee plus twee?</string>
    <string name="two_nl_word_27">twee plus twee is vier</string>
    <string name="two_gr_word_1">τι κάνεις;</string>
    <string name="two_gr_word_2">τι κάνετε;</string>
    <string name="two_gr_word_3">ο κύριος</string>
    <string name="two_gr_word_4">καλημέρα κύριε Μορέτι</string>
    <string name="two_gr_word_5">κύριε</string>
    <string name="two_gr_word_6">καλά</string>
    <string name="two_gr_word_7">ευχαριστώ</string>
    <string name="two_gr_word_8">πώς είσαι;</string>
    <string name="two_gr_word_9">πώς είστε;</string>
    <string name="two_gr_word_10">μια χαρά</string>
    <string name="two_gr_word_11">πολύ καλά</string>
    <string name="two_gr_word_12">έτσι κι έτσι</string>
    <string name="two_gr_word_13">όχι πολύ καλά</string>
    <string name="two_gr_word_14">ένα</string>
    <string name="two_gr_word_15">δύο</string>
    <string name="two_gr_word_16">τρία</string>
    <string name="two_gr_word_17">τέσσερα</string>
    <string name="two_gr_word_18">πέντε</string>
    <string name="two_gr_word_19">έξι</string>
    <string name="two_gr_word_20">εφτά</string>
    <string name="two_gr_word_21">οχτώ</string>
    <string name="two_gr_word_22">εννιά</string>
    <string name="two_gr_word_23">δέκα</string>
    <string name="two_gr_word_24">μηδέν</string>
    <string name="two_gr_word_25">κάνω</string>
    <string name="two_gr_word_26">πόσο κάνει δύο και δύο;</string>
    <string name="two_gr_word_27">δύο και δύο κάνει τέσσερα</string>
    <string name="three_nl_word_1">werken</string>
    <string name="three_nl_word_2">in, naar, aan</string>
    <string name="three_nl_word_3">docente</string>
    <string name="three_nl_word_4">nu</string>
    <string name="three_nl_word_5">wonen</string>
    <string name="three_nl_word_6">getrouwd</string>
    <string name="three_nl_word_7">man</string>
    <string name="three_nl_word_8">van haar</string>
    <string name="three_nl_word_9">hebben</string>
    <string name="three_nl_word_10">kind</string>
    <string name="three_nl_word_11">met, bij</string>
    <string name="three_nl_word_12">vader</string>
    <string name="three_nl_word_13">welke</string>
    <string name="three_nl_word_14">waarvandaan?</string>
    <string name="three_nl_word_15">Parijs</string>
    <string name="three_nl_word_16">Moskou</string>
    <string name="three_nl_word_17">Wenen</string>
    <string name="three_nl_word_18">Madrid</string>
    <string name="three_nl_word_19">Praag</string>
    <string name="three_nl_word_20">Londen</string>
    <string name="three_nl_word_21">Boekarest</string>
    <string name="three_nl_word_22">Roemenië</string>
    <string name="three_nl_word_23">Toronto</string>
    <string name="three_nl_word_24">Thessaloniki</string>
    <string name="three_nl_word_25">Groot-Brittanië</string>
    <string name="three_nl_word_26">Liverpool</string>
    <string name="three_nl_word_27">Oslo</string>
    <string name="three_nl_word_28">Turkije</string>
    <string name="three_nl_word_29">Ankara</string>
    <string name="three_nl_word_30">China</string>
    <string name="three_nl_word_31">Peking</string>
    <string name="three_nl_word_32">San Francisco</string>
    <string name="three_nl_word_33">Pakistan</string>
    <string name="three_nl_word_34">ja</string>
    <string name="three_nl_word_35">denken, vinden</string>
    <string name="three_nl_word_36">Italië</string>
    <string name="three_nl_word_37">elf</string>
    <string name="three_nl_word_38">twaalf</string>
    <string name="three_nl_word_39">dertien</string>
    <string name="three_nl_word_40">veertien</string>
    <string name="three_nl_word_41">vijftien</string>
    <string name="three_nl_word_42">zestien</string>
    <string name="three_nl_word_43">zeventien</string>
    <string name="three_nl_word_44">achtien</string>
    <string name="three_nl_word_45">negentien</string>
    <string name="three_nl_word_46">twintig</string>
    <string name="three_nl_word_47">dertig</string>
    <string name="three_nl_word_48">veertig</string>
</resources>