<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:orientation="vertical"
    tools:context="com.example.android.taalhuisnieuwgrieks.MainActivity">

    <!-- Frame 1-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lesson_one"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/lesson_one"/>

            <TextView
                android:id="@+id/lesson_seven"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/lesson_seven"/>

            <TextView
                android:id="@+id/lesson_thirteen"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/lesson_thirteen"/>
        </LinearLayout>

    </FrameLayout>

    <!-- Frame 2 -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorYellow">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lesson_two"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/lesson_two"/>

            <TextView
                android:id="@+id/lesson_eight"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/lesson_eight"/>

            <TextView
                android:id="@+id/lesson_fourteen"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/lesson_fourteen"/>
        </LinearLayout>

    </FrameLayout>

    <!-- Frame 3 -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lesson_three"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/lesson_three"/>

            <TextView
                android:id="@+id/lesson_nine"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/lesson_nine"/>

            <TextView
                android:id="@+id/lesson_fifteen"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/lesson_fifteen"/>
        </LinearLayout>

    </FrameLayout>

    <!-- Frame 4 -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorYellow">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lesson_four"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/lesson_four"/>

            <TextView
                android:id="@+id/lesson_ten"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/lesson_ten"/>

            <TextView
                android:id="@+id/lesson_sixteen"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/lesson_sixteen"/>
        </LinearLayout>

    </FrameLayout>

    <!-- Lesson 5 -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/lesson_five"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/lesson_five"/>

            <TextView
                android:id="@+id/lesson_eleven"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/lesson_eleven"/>

            <TextView
                android:id="@+id/lesson_seventeen"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/lesson_seventeen"/>
        </LinearLayout>

    </FrameLayout>

    <!-- Lesson 6 -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorYellow">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/lesson_six"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/lesson_six" />

        <TextView
            android:id="@+id/lesson_twelve"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/lesson_twelve" />
        <TextView
            android:id="@+id/lesson_eighteen"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/lesson_eighteen" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>